rest api, databing, rxjava, anim, activity, fragment, mvvm, aac, dagger hilt, repository,

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,45 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.h.androidkotlinsample">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:fullBackupContent="false"
         android:label="@string/app_name"
+        android:name=".AppApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidKotlinSample">
+        android:theme="@style/Theme.AndroidKotlinSample"
+        android:largeHeap="true"
+        android:requestLegacyExternalStorage="true"
+        android:resizeableActivity="false"
+        android:usesCleartextTraffic="true">
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name=".ui.intro.IntroActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard|smallestScreenSize|screenLayout"
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ui.base.BaseActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard|smallestScreenSize|screenLayout"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.main.MainActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize|keyboard|smallestScreenSize|screenLayout"
+            android:exported="true"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
